# eipy

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  README.rst  demo.py  ei.py  ens_selection.py  interpretation.py  interpretationNestedCV.py  interpretation_demo.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  utils.py
.github/workflows/: publish_pypi.yml  publish_test_pypi.yml  test_deploy.yml  tests.yml
docs/: requirements.txt
docs/source/: api_reference.rst  conf.py  datasets.rst  development.rst  ensemble_integration.rst  getting_started.rst  index.rst  permutation_interpreter.rst  tutorial.ipynb  usage.rst
docs/source/demos/: ei_demo.ipynb
ei/: interpretation.py
ei-python/: ei.py  ens_selection.py  setup.py
eipy/: COVID_implement.ipynb  additional_ensembles.py  dataset.py  datasets.py  ei.py  ens_selection.py  interpretation.py  metrics.py  multi-class.ipynb  tadpole_implement.ipynb  utils.py
eipy/data/binary_data/: diet.csv  health_status.csv  labels.csv  other_lifestyle_behavior.csv  sociodemographic.csv
processing_scripts/: combine_feature_predicts.py  combine_individual_feature_preds.py  common.py  generate_data.py
sample_data/coexpression/: data.arff
sample_data/cooccurence/: data.arff
sample_data/database/: classifiers.txt  data.arff
sample_data/experimental/: data.arff
sample_data/fusion/: data.arff  weka.properties
sample_data/neighborhood/: data.arff
source/: conf.py
tests/: demo.py  interpretation_demo.ipynb  test.ipynb  test_ei.py  test_load_data.py
