[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ensemble-integration"
version = "0.1.5"
readme = "README.rst"
description = "Ensemble Integration: a customizable pipeline for generating multi-modal, heterogeneous ensembles"
authors = ["Jamie Bennett", "Yan Chak (Richard) Li", "Aviad Susman", "Gaurav Pandey"]
license = "GNU General Public License version 3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
packages = [
    { include = "eipy"},
]

[tool.poetry.urls]
"Homepage" = "https://github.com/GauravPandeyLab/eipy"
"Documentation" = "https://eipy.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.8"
imbalanced-learn = ">=0.11"
joblib = ">=1.3"
numpy = ">=1.24"
pandas = ">=1.4"
scikit-learn = ">=1.2,<1.3"
scipy = {version = ">=1.0,<1.12", python = ">=3.8,<3.13"}
shap = ">=0.42"
xgboost = ">=1.7"
pandoc = "^2.3"
dill = "^0.3.7"
wget = "^3.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
flake8 = ">=3.9"
flake8-bugbear = ">=23"
tox = ">=3.9"
pytest-cov = ">=3.0"
black = ">=23.0"
ipykernel = "^6.25.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^4.2"
sphinx-autodoc-typehints = "^1.12"
sphinx_rtd_theme = "1.3.0"
nbsphinx = "0.9.3"
sphinx-copybutton = "0.5.2"
numpydoc = "1.5.0"

[tool.pytest.ini_options]
addopts = "--cov=eipy --cov-report html --cov-append"
testpaths = [
    "tests"
]
